# isabelle-proof-exemple

./: .gitignore  Makefile  README.md  ROOTS
proof/: Import_C.thy  Listp.thy  ROOT
proof/document/: root.tex
slides/: Makefile  slides.tex
src/: CMakeLists.txt  list.c  list.h  main.c
